force-app/main/default/objects/CommercientSF__ArTrnSummary__c/CommercientSF__ArTrnSummary__c.object-meta.xml
<CustomObject>
    <label>SYSPRO AR Trn Summary</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SYSPRO ArTrnSummarys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>