force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__BranchCostAccount__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__BranchCostAccount__c</fullName>
    <description>BranchCostAccount</description>
    <label>BranchCostAccount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>