force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__BranchCostAmount__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__BranchCostAmount__c</fullName>
    <description>BranchCostAmount</description>
    <label>BranchCostAmount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>