force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__BranchSalesAccount__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__BranchSalesAccount__c</fullName>
    <description>BranchSalesAccount</description>
    <label>BranchSalesAccount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>