force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__BranchSalesAmount__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__BranchSalesAmount__c</fullName>
    <description>BranchSalesAmount</description>
    <label>BranchSalesAmount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>