force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__BrCstAnalysisEntry__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__BrCstAnalysisEntry__c</fullName>
    <description>BrCstAnalysisEntry</description>
    <label>BrCstAnalysisEntry</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>