force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__BrSalesAnaEntry__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__BrSalesAnaEntry__c</fullName>
    <description>BrSalesAnaEntry</description>
    <label>BrSalesAnaEntry</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>