force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__CashCredit__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CashCredit__c</fullName>
    <description>CashCredit</description>
    <label>CashCredit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>