force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__CommissionsUpd__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CommissionsUpd__c</fullName>
    <description>CommissionsUpd</description>
    <label>CommissionsUpd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>