force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__CommissionValue__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CommissionValue__c</fullName>
    <description>CommissionValue</description>
    <label>CommissionValue</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>