force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__CreditedInvoice__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CreditedInvoice__c</fullName>
    <description>CreditedInvoice</description>
    <label>CreditedInvoice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>