force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__DepositType__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DepositType__c</fullName>
    <description>DepositType</description>
    <label>DepositType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>