force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__DisAnalysisEntry__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DisAnalysisEntry__c</fullName>
    <description>DisAnalysisEntry</description>
    <label>DisAnalysisEntry</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>