force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__DispatchAccount__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DispatchAccount__c</fullName>
    <description>DispatchAccount</description>
    <label>DispatchAccount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>