force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__DispatchAmount__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DispatchAmount__c</fullName>
    <description>DispatchAmount</description>
    <label>DispatchAmount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>