force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__DocumentType__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DocumentType__c</fullName>
    <description>DocumentType</description>
    <label>DocumentType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>