force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__ExemptValue__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ExemptValue__c</fullName>
    <description>ExemptValue</description>
    <label>ExemptValue</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>