force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__ExternalKey__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ExternalKey__c</fullName>
    <description>ExternalKey</description>
    <externalId>true</externalId>
    <label>ExternalKey</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>