force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__ForeignFreightVal__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ForeignFreightVal__c</fullName>
    <description>ForeignFreightVal</description>
    <label>ForeignFreightVal</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>