force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__ForeignMerchVal__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ForeignMerchVal__c</fullName>
    <description>ForeignMerchVal</description>
    <label>ForeignMerchVal</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>