force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__ForeignOtherVal__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ForeignOtherVal__c</fullName>
    <description>ForeignOtherVal</description>
    <label>ForeignOtherVal</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>