force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__ForeignTaxVal__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ForeignTaxVal__c</fullName>
    <description>ForeignTaxVal</description>
    <label>ForeignTaxVal</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>