force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__FreightValue__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__FreightValue__c</fullName>
    <description>FreightValue</description>
    <label>FreightValue</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>