force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__FstUpdated__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__FstUpdated__c</fullName>
    <description>FstUpdated</description>
    <label>FstUpdated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>