force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__GlobalTaxUpd__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__GlobalTaxUpd__c</fullName>
    <description>GlobalTaxUpd</description>
    <label>GlobalTaxUpd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>