force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__InProcessFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__InProcessFlag__c</fullName>
    <description>InProcessFlag</description>
    <label>InProcessFlag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>