force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__InterBranchTrf__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__InterBranchTrf__c</fullName>
    <description>InterBranchTrf</description>
    <label>InterBranchTrf</label>
    <length>255</length>
    <type>Text</type>
</CustomField>