force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__InterfaceFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__InterfaceFlag__c</fullName>
    <description>InterfaceFlag</description>
    <label>InterfaceFlag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>