force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__Invoice__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Invoice__c</fullName>
    <description>Invoice</description>
    <label>Invoice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>