force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__InvoiceCount__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__InvoiceCount__c</fullName>
    <description>InvoiceCount</description>
    <label>InvoiceCount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>