force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__InvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__InvoiceDate__c</fullName>
    <description>InvoiceDate</description>
    <label>InvoiceDate</label>
    <type>DateTime</type>
</CustomField>