force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__InvoiceRegPrted__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__InvoiceRegPrted__c</fullName>
    <description>InvoiceRegPrted</description>
    <label>InvoiceRegPrted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>