force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__LastPrintedDel__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__LastPrintedDel__c</fullName>
    <description>LastPrintedDel</description>
    <label>LastPrintedDel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>