force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__MerchandiseCost__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MerchandiseCost__c</fullName>
    <description>MerchandiseCost</description>
    <label>MerchandiseCost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>