force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__MerchandiseValue__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MerchandiseValue__c</fullName>
    <description>MerchandiseValue</description>
    <label>MerchandiseValue</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>