force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__MulDiv__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MulDiv__c</fullName>
    <description>MulDiv</description>
    <label>MulDiv</label>
    <length>255</length>
    <type>Text</type>
</CustomField>