force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__Nationality__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Nationality__c</fullName>
    <description>Nationality</description>
    <label>Nationality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>