force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__Operator__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Operator__c</fullName>
    <description>Operator</description>
    <label>Operator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>