force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__OrderType__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__OrderType__c</fullName>
    <description>OrderType</description>
    <label>OrderType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>