force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__OrdInvXrefPrted__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__OrdInvXrefPrted__c</fullName>
    <description>OrdInvXrefPrted</description>
    <label>OrdInvXrefPrted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>