force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__OtherValue__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__OtherValue__c</fullName>
    <description>OtherValue</description>
    <label>OtherValue</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>