force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__Register__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Register__c</fullName>
    <description>Register</description>
    <label>Register</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>