force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__SalesOrderJob__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SalesOrderJob__c</fullName>
    <description>SalesOrderJob</description>
    <label>SalesOrderJob</label>
    <length>255</length>
    <type>Text</type>
</CustomField>