force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__Salesperson__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Salesperson__c</fullName>
    <description>Salesperson</description>
    <label>Salesperson</label>
    <length>255</length>
    <type>Text</type>
</CustomField>