force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__SalesTurnOPrted__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SalesTurnOPrted__c</fullName>
    <description>SalesTurnOPrted</description>
    <label>SalesTurnOPrted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>