force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__SettlementDisc__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SettlementDisc__c</fullName>
    <description>SettlementDisc</description>
    <label>SettlementDisc</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>