force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__Source__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Source__c</fullName>
    <description>Source</description>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>