force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__SubAccount__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SubAccount__c</fullName>
    <description>SubAccount</description>
    <label>SubAccount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>