force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__Syspro_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Syspro_Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Syspro Sales Order</label>
    <referenceTo>CommercientSF__SorMasterRep__c</referenceTo>
    <relationshipLabel>SYSPRO ArTrnSummarys</relationshipLabel>
    <relationshipName>SYSPRO_ArTrnSummarys</relationshipName>
    <type>Lookup</type>
</CustomField>