force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__TaxExemptNumber__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TaxExemptNumber__c</fullName>
    <description>TaxExemptNumber</description>
    <label>TaxExemptNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>