force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__TaxExemptOverride__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TaxExemptOverride__c</fullName>
    <description>TaxExemptOverride</description>
    <label>TaxExemptOverride</label>
    <length>255</length>
    <type>Text</type>
</CustomField>