force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__TaxUpd__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TaxUpd__c</fullName>
    <description>TaxUpd</description>
    <label>TaxUpd</label>
    <length>255</length>
    <type>Text</type>
</CustomField>