force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__TrnMonth__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TrnMonth__c</fullName>
    <description>TrnMonth</description>
    <label>TrnMonth</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>