force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__TrnYear__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TrnYear__c</fullName>
    <description>TrnYear</description>
    <label>TrnYear</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>