force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__UserField3__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__UserField3__c</fullName>
    <description>UserField3</description>
    <label>UserField3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>