force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__WarehouseAccount__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__WarehouseAccount__c</fullName>
    <description>WarehouseAccount</description>
    <label>WarehouseAccount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>