force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__WarehouseAmount__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__WarehouseAmount__c</fullName>
    <description>WarehouseAmount</description>
    <label>WarehouseAmount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>