force-app/main/default/objects/CommercientSF__ArTrnSummary__c/fields/CommercientSF__WhAnalysisEntry__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__WhAnalysisEntry__c</fullName>
    <description>WhAnalysisEntry</description>
    <label>WhAnalysisEntry</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>